--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev:client": "vite dev --port 5000",
+    "dev:client": "vite dev --port 5001",
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "stop": "lsof -ti:5000 | xargs kill -9",
+    "restart": "bun run stop && bun run dev"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
