chore: Add backup folder to .gitignore
- Ignore all database backup files (*.sql)
- Ignore database-backup.json and database-restore.sql
- Ignore the entire scripts/backup/ directory
- Remove accidentally committed backup files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ apps/*/.env
 apps/*/.env.local
 apps/*/.env.development
 apps/*/.env.production
+
+# Database backups
+**/database-backup.json
+**/database-restore.sql
+apps/core/scripts/backup/
+*.sql
