--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-email/render": "^2.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.60.5",
     "better-auth": "^1.4.6",
@@ -92,6 +93,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^2.1.9",
     "reactflow": "^11.11.4",
