--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -19,6 +19,7 @@
     "restart": "bun run stop && bun run dev"
   },
   "dependencies": {
+    "@ydtb/ui": "workspace:*",
     "@radix-ui/react-slider": "^1.3.6",
     "@react-email/components": "^1.0.1",
     "@react-email/tailwind": "^2.0.1",
