--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
-    "@ydtb/ui": "workspace:*",
     "@ydtb/core": "workspace:*",
+    "@ydtb/ui": "workspace:*",
+    "dotenv-mono": "^1.5.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.475.0",
     "next": "16.0.10",
