--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,7 @@
     "./lib/*": "./src/lib/*.ts",
     "./base/*": "./src/components/ui/*.tsx",
     "./block/*": "./src/components/block/*.tsx",
+    "./welcome/*": "./src/components/welcome/*.tsx",
     "./hooks/*": "./src/hooks/*.ts",
     "./src/*": "./src/*"
   }
